--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         
         <head class="jumbotron">
-            <h1>Group Hangman</h1>
+            <h1>Group Project: Hangman</h1>
         </head>
         
         <div class="container">
